<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TestPinguino-Daneel</string>
    <string name="ServerMsg">Server down!!</string>
    <string name="Stop">Stop</string>
    <string name="Forward">Forward</string>
    <string name="Backward">Backward</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="StartServer">Start Server</string>
    <string name="StopServer">Stop Server</string>
</resources>